PPU registers and skeleton implementation

--- a/ppu/Cargo.toml
+++ b/ppu/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "nes"
+name = "ppu"
 version = "0.1.0"
 authors = ["Henry Sloan <henryksloan@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-cpu = { path = "../cpu" }
-ppu = { path = "../ppu" }
 memory = { path = "../memory" }
+bitflags = "1.2.1"
