--- a/sdl-ui/Cargo.toml
+++ b/sdl-ui/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2018"
 nes = { path = "../nes" }
 cpu = { path = "../cpu" }
 memory = { path = "../memory" }
-sdl2 = "0.34"
+sdl2 = "0.34.3"
 rand = "0.8.3"
 
-# [profile.release]
-# debug = true
+[profile.release]
+debug = true
