--- a/sdl-ui/Cargo.toml
+++ b/sdl-ui/Cargo.toml
@@ -11,5 +11,5 @@ memory = { path = "../memory" }
 sdl2 = "0.34.3"
 rand = "0.8.3"
 
-[profile.release]
-debug = true
+# [profile.release]
+# debug = true
