--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install SDL2
-      run: sudo apt-get install libsdl2-dev
+      run: |
+        sudo sed -i 's/azure\.//' /etc/apt/sources.list
+        sudo apt-get update
+        sudo apt-get install libsdl2-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
