--- a/sdl-ui/Cargo.toml
+++ b/sdl-ui/Cargo.toml
@@ -9,4 +9,7 @@ nes = { path = "../nes" }
 cpu = { path = "../cpu" }
 memory = { path = "../memory" }
 sdl2 = "0.34.3"
+sdl2-sys = "0.34.3"
 rand = "0.8.3"
+native-windows-gui = "1.0.10"
+native-windows-derive = "1.0.3"
