Improve testing config and fix overflow bug

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,13 @@ members = [
     "windows-ui",
 ]
 
-# [profile.release]
-# debug = true
+[profile.dev]
+opt-level = 3
+debug = true
+debug-assertions = true
+overflow-checks = true
+lto = false
+panic = 'unwind'
+incremental = true
+codegen-units = 256
+rpath = false
