--- a/sdl-ui/Cargo.toml
+++ b/sdl-ui/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sdl-frontend"
+name = "sdl-ui"
 version = "0.1.0"
 authors = ["Henry Sloan <henryksloan@gmail.com>"]
 edition = "2018"
