--- a/windows-ui/Cargo.toml
+++ b/windows-ui/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 nes = { path = "../nes" }
 cpu = { path = "../cpu" }
 memory = { path = "../memory" }
-sdl-frontend = { path = "../sdl-frontend" }
+sdl-ui = { path = "../sdl-ui" }
 sdl2 = "0.34.3"
 sdl2-sys = "0.34.3"
 rand = "0.8.3"
